--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A project to optimize travel times and route selection in TransMilenio, Bogotá.",
   "main": "src/app.ts",
   "scripts": {
-    "start": "ts-node src/app.ts",
+    "start": "node dist/app.js",
     "build": "tsc",
     "test": "jest"
   },
