--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A project to optimize travel times and route selection in TransMilenio, Bogotá.",
   "main": "src/app.ts",
   "scripts": {
-    "start": "node dist/app.js",
-    "build": "tsc",
+    "start": "ts-node src/app.ts",
+    "build": "echo 'Already built'"",
     "test": "jest"
   },
   "dependencies": {
