--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.ts",
   "scripts": {
     "start": "ts-node src/app.ts",
-    "build": "echo 'Already built'"",
+    "build": "echo 'Already built'",
     "test": "jest"
   },
   "dependencies": {
